tries sass gem instead

--- a/app/assets/stylesheets/grenander/application.scss
+++ b/app/assets/stylesheets/grenander/application.scss
@@ -17,4 +17,5 @@
 @import "browseNav";
 @import "headerNavbar";
 @import "searchSubnav";
+@import "font-awesome-sprockets";
 @import "font-awesome";
