--- a/app/views/layouts/grenander/_search_subnav--nojs.html.erb
+++ b/app/views/layouts/grenander/_search_subnav--nojs.html.erb
@@ -47,7 +47,7 @@
 		  </div>
 		<% end %>
 
-		<%= form_for("search", method: :get, :url => "https://archives.its.albany.edu/repository/catalog/", html: {class: 'search-query-form hyraxSearch'}) do |f| %>
+		<%= form_for("search", method: :get, :url => "https://archives.albany.edu/catalog/", html: {class: 'search-query-form hyraxSearch'}) do |f| %>
 		  <%= hidden_field_tag 'search_field', 'all_fields'  %>
 	      <div class="input-group">
 		
