--- a/app/views/layouts/grenander/_search_subnav.html.erb
+++ b/app/views/layouts/grenander/_search_subnav.html.erb
@@ -8,20 +8,22 @@
 			<% @query = params[:q] %>
 		<% end %>
 
-		<%= form_for("search", method: :get, :url => "https://archives.albany.edu/description/catalog", html: {class: 'search-query-form allSearch'}) do |f| %>
+		<%= form_tag search_action_url, method: :get, class: 'search-query-form allSearch', role: 'search', 'aria-label' => t('blacklight.search.form.submit') do %>
 			<%= render_hash_as_hidden_fields(search_state.params_for_search.except(:q, :search_field, :qt, :page, :utf8)) %>
 			<div class="input-group">
 			
-					<input name="q" id="params-q" value="<%= @query %>" placeholder="Search all collection records..." class="search_q q form-control tt-input" type="text" />
-					<input type="hidden" name="search_field" id="search_field" value="all_fields" />
+					<label for="q" class="sr-only"><%= t('blacklight.search.form.search.label') %></label>
+					<%= text_field_tag :q, params[:q], placeholder: t('blacklight.search.form.search.placeholder'), class: "search-q q form-control rounded-#{search_fields.length > 1 ? '0' : 'left'}", id: "q", autocomplete: presenter.autocomplete_enabled? ? "off" : "", autofocus: presenter.autofocus?, data: { autocomplete_enabled: presenter.autocomplete_enabled?, autocomplete_path: search_action_path(action: :suggest) }  %>
+
 					<div class="input-group-append">
 					<button id="currentSelection" class="btn btn-secondary dropdown-toggle searchSelect" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						Collections</button>
+						UAlbany History</button>
 						<button class="btn btn-secondary dropdown-toggle searchSelect noText" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
 							<div class="dropdown-menu searchOptions">
 								<a class="dropdown-item" data="allSearch" id="allSearch">Everything</a>
 								<a class="dropdown-item" data="arclightSearch" id="arclightSearch">Collections</a>
 								<a class="dropdown-item" data="hyraxSearch" id="hyraxSearch">Digital Selections</a>
+								<a class="dropdown-item" data="historySearch" id="historySearch">UAlbany History</a>
 							</div>
 						<button class="btn btn-primary" type="submit"><i class="fa fa-search"></i></button>
 					</div>
