--- a/app/views/layouts/grenander/_search_subnav.html.erb
+++ b/app/views/layouts/grenander/_search_subnav.html.erb
@@ -12,8 +12,9 @@
 			<%= render_hash_as_hidden_fields(search_state.params_for_search.except(:q, :search_field, :qt, :page, :utf8)) %>
 			<div class="input-group">
 			
-					<label for="q" class="sr-only"><%= t('blacklight.search.form.search.label') %></label>
-					<%= text_field_tag :q, params[:q], placeholder: t('blacklight.search.form.search.placeholder'), class: "search-q q form-control rounded-#{search_fields.length > 1 ? '0' : 'left'}", id: "q", autocomplete: presenter.autocomplete_enabled? ? "off" : "", autofocus: presenter.autofocus?, data: { autocomplete_enabled: presenter.autocomplete_enabled?, autocomplete_path: search_action_path(action: :suggest) }  %>
+					<label for="q" class="sr-only">Search UAlbany's history...</label>
+
+					<%= text_field_tag :q, params[:q], placeholder: "Search UAlbany's history...", class: "search-q q form-control rounded-0", id: "q", autocomplete: presenter.autocomplete_enabled? ? "off" : "", autofocus: presenter.autofocus?, data: { autocomplete_enabled: presenter.autocomplete_enabled?, autocomplete_path: search_action_path(action: :suggest) }  %>
 
 					<div class="input-group-append">
 					<button id="currentSelection" class="btn btn-secondary dropdown-toggle searchSelect" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
