--- a/app/views/layouts/grenander/_search_subnav.html.erb
+++ b/app/views/layouts/grenander/_search_subnav.html.erb
@@ -14,7 +14,7 @@
 			
 					<label for="q" class="sr-only">Search UAlbany's history...</label>
 
-					<%= text_field_tag :q, params[:q], placeholder: "Search UAlbany's history...", class: "search-q q form-control rounded-0", id: "q", autocomplete: presenter.autocomplete_enabled? ? "off" : "", autofocus: presenter.autofocus?, data: { autocomplete_enabled: presenter.autocomplete_enabled?, autocomplete_path: search_action_path(action: :suggest) }  %>
+					<%= text_field_tag :q, params[:q], placeholder: "Search UAlbany's history...", class: "search-q q form-control rounded-0", id: "q", autofocus: presenter.autofocus?, data: { autocomplete_enabled: presenter.autocomplete_enabled?, autocomplete_path: search_action_path(action: :suggest) }  %>
 
 					<div class="input-group-append">
 					<button id="currentSelection" class="btn btn-secondary dropdown-toggle searchSelect" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
