--- a/app/views/layouts/grenander/_search_subnav.html.erb
+++ b/app/views/layouts/grenander/_search_subnav.html.erb
@@ -8,13 +8,14 @@
 			<% @query = params[:q] %>
 		<% end %>
 
-		<%= form_tag search_action_url, method: :get, class: 'search-query-form allSearch', role: 'search', 'aria-label' => t('blacklight.search.form.submit') do %>
+		<%= form_tag search_action_url, method: :get ,class: 'search-query-form historySearch', role: 'search', 'aria-label' => t('blacklight.search.form.submit') do %>
 			<%= render_hash_as_hidden_fields(search_state.params_for_search.except(:q, :search_field, :qt, :page, :utf8)) %>
+
 			<div class="input-group">
-			
+					<%= hidden_field_tag :search_field, search_fields.first.last %>
 					<label for="q" class="sr-only">Search UAlbany's history...</label>
 
-					<%= text_field_tag :q, params[:q], placeholder: "Search UAlbany's history...", class: "search-q q form-control rounded-0", id: "q", autofocus: presenter.autofocus?, data: { autocomplete_enabled: presenter.autocomplete_enabled?, autocomplete_path: search_action_path(action: :suggest) }  %>
+					<input id="params-q" type="text" name="q" id="q" placeholder="Search UAlbany's history..." class="search-q q form-control tt-input" data-autocomplete-enabled="true" data-autocomplete-path="/catalog/suggest" autocomplete="off" spellcheck="false" dir="auto">
 
 					<div class="input-group-append">
 					<button id="currentSelection" class="btn btn-secondary dropdown-toggle searchSelect" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
