--- a/app/views/layouts/grenander/_navbar.html.erb
+++ b/app/views/layouts/grenander/_navbar.html.erb
@@ -12,9 +12,18 @@
 	        All Collections
 	      </a>
 	      <div class="dropdown-menu">
-	        <a class="dropdown-item" href="#">Link 1</a>
-	        <a class="dropdown-item" href="#">Link 2</a>
-	        <a class="dropdown-item" href="#">Link 3</a>
+	        <a class="dropdown-item" href="#">About Collections</a>
+	        <a class="dropdown-item" href="#">NY State Modern Political Archive</a>
+	        <a class="dropdown-item" href="#">National Death Penalty Archive</a>
+	        <a class="dropdown-item" href="#">German Intellectual Émigré</a>
+	        <a class="dropdown-item" href="#">University Archives</a>
+	        <a class="dropdown-item" href="#">Mathes Childrens Literature</a>
+	        <a class="dropdown-item" href="#">Business and Literary Manuscripts</a>
+	        <a class="dropdown-item" href="#">Rare Books</a>
+	        <a class="dropdown-item" href="#">Web Archives</a>
+	        <div class="dropdown-divider"></div> 
+	        <a class="dropdown-item" href="#">A-Z Complete List of Collections</a>
+	        <a class="dropdown-item" href="#">Subject Guides to Collections</a>
 	      </div>
 	    </li>
 
@@ -23,9 +32,16 @@
 	        Online Content
 	      </a>
 	      <div class="dropdown-menu">
-	        <a class="dropdown-item" href="#">Link 1</a>
-	        <a class="dropdown-item" href="#">Link 2</a>
-	        <a class="dropdown-item" href="#">Link 3</a>
+	      	<a class="dropdown-item" href="#">Online Exhibits</a>
+	      	<a class="dropdown-item" href="#">Espy Project Execution Records</a>
+	        <a class="dropdown-item" href="#">University Photograph Collections</a>
+	        <a class="dropdown-item" href="#">Albany Student Press</a>
+	        <a class="dropdown-item" href="#">University Senate Legislation</a>
+	        <a class="dropdown-item" href="#">Yearbook Collection</a>
+	        <a class="dropdown-item" href="#">The Milne School</a>
+	        <a class="dropdown-item" href="#">WAMC Northeast Public Radio</a>
+	        <a class="dropdown-item" href="#">CSEA Publications</a>
+	        <a class="dropdown-item" href="#">More...</a>
 	      </div>
 	    </li>
 
@@ -34,9 +50,14 @@
 	        About
 	      </a>
 	      <div class="dropdown-menu">
-	        <a class="dropdown-item" href="#">Link 1</a>
-	        <a class="dropdown-item" href="#">Link 2</a>
-	        <a class="dropdown-item" href="#">Link 3</a>
+	        <a class="dropdown-item" href="#">Using the Archives</a>
+	        <a class="dropdown-item" href="#">Hours and Directions</a>
+	        <a class="dropdown-item" href="#">News Updates</a>
+	        <a class="dropdown-item" href="#">University Records</a>
+	        <a class="dropdown-item" href="#">Find Other Historical Repositories</a>
+	        <a class="dropdown-item" href="#">Awards</a>
+	        <a class="dropdown-item" href="#">Staff</a>
+	        <a class="dropdown-item" href="#">Documentation Site</a>
 	      </div>
 	    </li>
 
