--- a/app/views/layouts/blacklight.html.erb
+++ b/app/views/layouts/blacklight.html.erb
@@ -2,6 +2,8 @@
   <% if content_for? :sidebar %>
     <section id="content" class="<%= main_content_classes %> order-last" aria-label="<%= t('blacklight.search.documents.aria.search_results') %>">
       <%= render partial: 'grenander/search_source' %>
+
+      <%= content_for(:container_header) %>
       <%= yield %>
     </section>
 
