--- a/app/assets/stylesheets/grenander/navbar.css.scss
+++ b/app/assets/stylesheets/grenander/navbar.css.scss
@@ -78,7 +78,7 @@ body {
 /* logo */
 
 .navbar-logo {
-	background: transparent url(/assets/grenander/grenanderSmall.png) no-repeat top left;
+	background: transparent url(asset-path('/assets/grenander/grenanderSmall.png')) no-repeat top left;
 	display: inline-block;
 	margin-right: 20px;
 	margin-top: -0.4rem;
@@ -102,7 +102,7 @@ body {
 @media (min-width: 768px) {
 	.navbar-logo {
 		flex: 0 0 320px;
-		background: transparent url(/assets/grenander/grenanderLogo.png) no-repeat top left;
+		background: transparent url(asset-path('/assets/grenander/grenanderLogo.png')) no-repeat top left;
 		background-position: center;
 		background-size: contain;
 	}
