--- a/app/assets/stylesheets/grenander/navbar.css.scss
+++ b/app/assets/stylesheets/grenander/navbar.css.scss
@@ -78,7 +78,10 @@ body {
 /* logo */
 
 .navbar-logo {
-	background: transparent url(asset-path('/assets/grenander/grenanderSmall.png')) no-repeat top left;
+	background-image: image_url('grenander/grenanderSmall.png');
+	background-color: transparent;
+	background-position: center left;
+	background-repeat: no-repeat;
 	display: inline-block;
 	margin-right: 20px;
 	margin-top: -0.4rem;
@@ -102,7 +105,10 @@ body {
 @media (min-width: 768px) {
 	.navbar-logo {
 		flex: 0 0 320px;
-		background: transparent url(asset-path('/assets/grenander/grenanderLogo.png')) no-repeat top left;
+		background-image: image_url('grenander/grenanderLogo.png');
+		background-color: transparent;
+		background-position: center left;
+		background-repeat: no-repeat;
 		background-position: center;
 		background-size: contain;
 	}
