--- a/app/assets/stylesheets/grenander/search-source.css.scss
+++ b/app/assets/stylesheets/grenander/search-source.css.scss
@@ -6,7 +6,10 @@
 }
 
 .search-sources li.nav-item a.active {
-	background: #46166B url(asset-path('/assets/grenander/index.png')) no-repeat center right;
+	background-image: image_url('grenander/index.png');
+	background-color: #46166B;
+	background-position: center right;
+	background-repeat: no-repeat;
 	border-left: 5px solid #006c68;
 	border-radius: 0px;
 	display: block;
@@ -46,7 +49,7 @@
 	/*transition: all ease .25s;*/
 	border-radius: calc(0.5rem - 1px);
 	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-	background-image: url(asset-path('/assets/grenander/search-lighten10.png'));
+	background-image: image_url('grenander/search-lighten10.png');
 	background-repeat: no-repeat;
 	background-size: contain;
 	background-position: top left;
