--- a/app/views/grenander/_search_source.html.erb
+++ b/app/views/grenander/_search_source.html.erb
@@ -1,6 +1,9 @@
-<div class="navbar navbar-expand-sm search-source">
-	<div class="<%= container_classes %>">
-		<h2 class="search-intro"><%= source_name %></h2>
-		<%= render_search_bar  %>
+<div class="d-flex align-items-center">
+	<div class="navbar navbar-expand-sm search-source flex-fill">
+		<div class="<%= container_classes %>">
+			<h2 class="search-intro"><%= source_name %></h2>
+			<%# render_search_bar  %>
+			<%= render partial: 'grenander/search_bar' %>
+		</div>
 	</div>
 </div>
