search box should now work in  both

--- a/app/views/grenander/_search_source.html.erb
+++ b/app/views/grenander/_search_source.html.erb
@@ -2,8 +2,13 @@
 	<div class="navbar navbar-expand-sm search-source flex-fill">
 		<div class="<%= container_classes %>">
 			<h2 class="search-intro"><%= source_name %></h2>
-			<%# render_search_bar  %>
-			<%= render partial: 'grenander/search_bar' %>
+			<% if render_search_bar %>
+				<%# For blacklight  %>
+				<% render_search_bar  %>
+			<% else %>
+				<%# For quicksearch  %>
+				<%= render partial: 'grenander/search_bar' %>
+			<% end %>
 		</div>
 	</div>
 </div>
