everything home page added

--- a/app/assets/stylesheets/grenander/everything-search.scss
+++ b/app/assets/stylesheets/grenander/everything-search.scss
@@ -199,3 +199,8 @@ p.card-text {
   color: #642a90;
   padding-right: 10px;
 }
+
+#about-searches .card-body > ul > li {
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
