--- a/app/views/grenander/_search_source.html.erb
+++ b/app/views/grenander/_search_source.html.erb
@@ -1,6 +1,6 @@
 <div class="d-flex align-items-center">
 	<div class="navbar navbar-expand-sm search-source flex-fill">
-		<div class="<%= container_classes %>">
+		<div class="source-box <%= container_classes %>">
 			<h2 class="search-intro"><%= source_name %></h2>
 			<% if defined? render_search_bar %>
 				<%# For blacklight  %>
