--- a/app/assets/stylesheets/grenander/navbar.css.scss
+++ b/app/assets/stylesheets/grenander/navbar.css.scss
@@ -75,6 +75,10 @@ body {
 	left: auto;
 }
 
+.navbar-dark .navbar-nav .show > .nav-link, .navbar-dark .navbar-nav .active > .nav-link, .navbar-dark .navbar-nav .nav-link.show, .navbar-dark .navbar-nav .nav-link.active {
+	color: #46166B;
+}
+
 /* logo */
 
 .navbar-logo {
