--- a/app/assets/stylesheets/grenander/search-source.css.scss
+++ b/app/assets/stylesheets/grenander/search-source.css.scss
@@ -48,6 +48,10 @@
 	padding-bottom: 1.2rem;
 }
 
+.search-query-form {
+	flex-grow: 1;	
+}
+
 .search-source .source-box {
 	background-color: #642a90;
 	min-height: 125px;
