separated searchbar and centered top menu

--- a/app/assets/stylesheets/grenander/search-source.css.scss
+++ b/app/assets/stylesheets/grenander/search-source.css.scss
@@ -67,9 +67,9 @@
 	background-position: top left;
 }
 
-/*#main-container .row section .d-flex {
+.search-row .row section .d-flex {
 	height: 100%;
-}*/
+}
 
 .search-source .search-query-form input {
 	border-top-right-radius: 0px;
