--- a/app/views/layouts/grenander/_navbar.html.erb
+++ b/app/views/layouts/grenander/_navbar.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-md navbar-dark topbar" role="navigation">
-  <div class="<%= container_classes %>">
+  <div class="container">
     <%= link_to application_name, root_path, class: 'navbar-brand navbar-logo' %>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#user-util-collapse" aria-controls="user-util-collapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
