--- a/app/views/grenander/quick_search/search/index.html.erb
+++ b/app/views/grenander/quick_search/search/index.html.erb
@@ -17,16 +17,16 @@
 
 <div class="quicksearch-ga-click-tracking">
     <div class="row articles-catalog justify-content-center">
-        <div class="col-md-4 summon module">
+        <div class="col-lg-6 col-xl-4 summon module">
             <%= render_module(@arclight, 'arclight') %>
         </div>
-        <div class="col-md-4 catalog module">
+        <div class="col-lg-6 col-xl-4 catalog module">
             <%= render_module(@hyrax, 'hyrax') %>
         </div>
-        <div class="col-md-4 catalog module">
+        <div class="col-lg-6 col-xl-4 catalog module">
             <%= render_module(@history, 'history') %>
         </div>
-        <div class="col-md-4 catalog module">
+        <div class="col-lg-6 col-xl-4 catalog module">
             <%= render_module(@mathes, 'mathes') %>
         </div>
     </div>
