--- a/app/assets/stylesheets/grenander/search-source.css.scss
+++ b/app/assets/stylesheets/grenander/search-source.css.scss
@@ -52,22 +52,8 @@
 	flex-grow: 1;	
 }
 
-.search-source .source-box {
-	background-color: #642a90;
-	min-height: 125px;
-	padding: 1.25rem 1rem 1.25rem 1.25rem;
-	z-index: 9;
-	top: 0px;
-	/*transition: all ease .25s;*/
-	border-radius: calc(0.5rem - 1px);
-	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-	background-image: image_url('grenander/search-lighten10.png');
-	background-repeat: no-repeat;
-	background-size: contain;
-	background-position: top left;
-}
 
-.search-row .row section .d-flex {
+.search-row .container .row section .d-flex {
 	height: 100%;
 }
 
@@ -121,3 +107,9 @@
 .search-source .input-group-append span:hover, .input-group-append span:active {
 	  color: #fff;
   }
+
+ /* Search Row Background */
+
+ /*.search-row {
+ 	background-image: url("https://archives.albany.edu/web/sliderImages/default/mpa3.jpg");
+ }*/
