--- a/app/views/layouts/blacklight/base.html.erb
+++ b/app/views/layouts/blacklight/base.html.erb
@@ -26,6 +26,7 @@
     <%= render partial: 'layouts/grenander/navbar' %>
     <%# render partial: 'layouts/grenander/header_navbar' %>
     <%# render partial: 'layouts/grenander/search_subnav' %>
+    <%= render partial: 'grenander/search_row' %>
 
   <main id="main-container" class="<%= container_classes %>" role="main" aria-label="<%= t('blacklight.main.aria.main_container') %>">
     <%# content_for(:container_header) %>
