removed search bg image

--- a/app/assets/stylesheets/grenander/search-source.css.scss
+++ b/app/assets/stylesheets/grenander/search-source.css.scss
@@ -124,5 +124,5 @@
  /* Search Row Background */
 
  .search-row {
- 	background-image: url("https://archives.albany.edu/web/sliderImages/default/mpa3.jpg");
+ 	/*background-image: url("https://archives.albany.edu/web/sliderImages/default/mpa3.jpg");*/
  }
