--- a/app/views/layouts/blacklight/base.html.erb
+++ b/app/views/layouts/blacklight/base.html.erb
@@ -26,14 +26,13 @@
     <%= render partial: 'layouts/grenander/navbar' %>
     <%# render partial: 'layouts/grenander/header_navbar' %>
     <%# render partial: 'layouts/grenander/search_subnav' %>
-    <%= render partial: 'grenander/search_row' %>
 
-  <main id="main-container" class="<%= container_classes %>" role="main" aria-label="<%= t('blacklight.main.aria.main_container') %>">
+  <main id="main-container" class="" role="main" aria-label="<%= t('blacklight.main.aria.main_container') %>">
     <%# content_for(:container_header) %>
 
     <%= render partial: 'shared/flash_msg', layout: 'shared/flash_messages' %>
 
-    <div class="row">
+    <div class="">
       <%= content_for?(:content) ? yield(:content) : yield %>
     </div>
   </main>
