--- a/app/views/grenander/_search_row.html.erb
+++ b/app/views/grenander/_search_row.html.erb
@@ -1,5 +1,5 @@
 <div class="search-row">
-	<div class="container">
+	<div class="container-fluid">
 		<div class="row">
 
 			<section id="search-content" class="<%= main_content_classes %> order-last">
