--- a/app/views/grenander/quick_search/pages/home.html.erb
+++ b/app/views/grenander/quick_search/pages/home.html.erb
@@ -1,33 +1,34 @@
+<div class="container">
+	<div id="about-searches" class="col-lg-9 offset-lg-3 card">
+		
+		<div class="card-body">
+			<h2 class="card-title">Everything</h2>
 
-<div id="about-searches" class="col-lg-9 offset-lg-3 card">
-	
-	<div class="card-body">
-		<h2 class="card-title">Everything</h2>
+			<h6 class="card-subtitle mb-4 text-muted">Everything includes a combined search of:</h6>
 
-		<h6 class="card-subtitle mb-4 text-muted">Everything includes a combined search of:</h6>
+		    <ul>
+				<li><a href="https://archives.albany.edu/descripton">All Collections</a> (records of all archives and manuscript material in the M.E. Grenander Department of Special Collections & Archives) 
+					<ul>
+						<li>Some of these items are available online and marked with <span class="badge badge-success">online content</span>.</li>
+						<li>If collections are not available online, you may request a few items to be digitized, or visit our reading room to view them in person.</li>
+					</ul>
+				</li>
+				<li><a href="https://archives.albany.edu/catalog">Online Content</a> (items that are available online because they have been digitized or were "born-digital," or created digitally)
+					<ul>
 
-	    <ul>
-			<li><a href="https://archives.albany.edu/descripton">All Collections</a> (records of all archives and manuscript material in the M.E. Grenander Department of Special Collections & Archives) 
-				<ul>
-					<li>Some of these items are available online and marked with <span class="badge badge-success">online content</span>.</li>
-					<li>If collections are not available online, you may request a few items to be digitized, or visit our reading room to view them in person.</li>
-				</ul>
-			</li>
-			<li><a href="https://archives.albany.edu/catalog">Online Content</a> (items that are available online because they have been digitized or were "born-digital," or created digitally)
-				<ul>
+						<li>Digital Selections are also represented in Collections alongside simmilar materials that may not be available online.</li>
+						<li>Collections may be digitized and make available online as single items from user requests, or among large portions of items that archivists have considered to be particularly useful and are often used.</li>
+					</ul>
+				</li>
 
-					<li>Digital Selections are also represented in Collections alongside simmilar materials that may not be available online.</li>
-					<li>Collections may be digitized and make available online as single items from user requests, or among large portions of items that archivists have considered to be particularly useful and are often used.</li>
-				</ul>
-			</li>
+				<li><a href="https://archives.albany.edu/history">UAlbany History</a> (curated timeline of events from the university's history with links to source material)</li>
 
-			<li><a href="https://archives.albany.edu/history">UAlbany History</a> (curated timeline of events from the university's history with links to source material)</li>
+				<li><a href="https://archives.albany.edu/mathes">Mathes Childrens Literature</a> (catalog of books from the Miriam Snow Mathes Historical Children's Literature Collection)</li>
 
-			<li><a href="https://archives.albany.edu/mathes">Mathes Childrens Literature</a> (catalog of books from the Miriam Snow Mathes Historical Children's Literature Collection)</li>
+				<li><a href="#">Rare Books</a> (catalog of pre-1801 European and pre-1820 American printed books)</li>
+			</ul>
 
-			<li><a href="#">Rare Books</a> (catalog of pre-1801 European and pre-1820 American printed books)</li>
-		</ul>
+		</div>
 
 	</div>
-
 </div>
