--- a/app/views/layouts/blacklight.html.erb
+++ b/app/views/layouts/blacklight.html.erb
@@ -1,7 +1,7 @@
 <% content_for(:content) do %>
   <%= render partial: 'grenander/search_row' %>
 
-  <div class="container">
+  <div class="container-fluid">
     <div class="row">
       <% if content_for? :sidebar %>
         <section id="content" class="<%= main_content_classes %> order-last" aria-label="<%= t('blacklight.search.documents.aria.search_results') %>">    
