--- a/app/views/layouts/blacklight/base.html.erb
+++ b/app/views/layouts/blacklight/base.html.erb
@@ -27,12 +27,12 @@
     <%# render partial: 'layouts/grenander/header_navbar' %>
     <%# render partial: 'layouts/grenander/search_subnav' %>
 
-  <main id="main-container" class="" role="main" aria-label="<%= t('blacklight.main.aria.main_container') %>">
+  <main id="main-container" class="container-fluid" role="main" aria-label="<%= t('blacklight.main.aria.main_container') %>">
     <%# content_for(:container_header) %>
 
     <%= render partial: 'shared/flash_msg', layout: 'shared/flash_messages' %>
 
-    <div class="">
+    <div class="row">
       <%= content_for?(:content) ? yield(:content) : yield %>
     </div>
   </main>
