--- a/app/assets/stylesheets/grenander/search-source.css.scss
+++ b/app/assets/stylesheets/grenander/search-source.css.scss
@@ -121,6 +121,11 @@
 	  color: #fff;
   }
 
+.form-control:focus {
+	border-color: #46166B;
+	box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 6px #46166B;
+}
+
  /* Search Row Background */
 
  .search-row {
