--- a/app/views/grenander/quick_search/pages/home.html.erb
+++ b/app/views/grenander/quick_search/pages/home.html.erb
@@ -1,5 +1,5 @@
-<div class="container">
-	<div id="about-searches" class="col-lg-9 offset-lg-3 card">
+<div class="col-lg-9 offset-lg-3">
+	<div id="about-searches" class="card">
 		
 		<div class="card-body">
 			<h2 class="card-title">Everything</h2>
