added searcher modules for pamphlets and rare books

--- a/app/views/grenander/quick_search/search/index.html.erb
+++ b/app/views/grenander/quick_search/search/index.html.erb
@@ -29,6 +29,12 @@
         <div class="col-lg-6 col-xl-4 catalog module">
             <%= render_module(@mathes, 'mathes') %>
         </div>
+        <div class="col-lg-6 col-xl-4 catalog module">
+            <%= render_module(@pamphlets, 'pamphlets') %>
+        </div>
+        <div class="col-lg-6 col-xl-4 catalog module">
+            <%= render_module(@books, 'books') %>
+        </div>
     </div>
 
     <div class="container">
