updated the search home page

--- a/app/views/grenander/quick_search/pages/home.html.erb
+++ b/app/views/grenander/quick_search/pages/home.html.erb
@@ -23,9 +23,11 @@
 
 				<li><a href="https://archives.albany.edu/history">UAlbany History</a> (curated timeline of events from the university's history with links to source material)</li>
 
-				<li><a href="https://archives.albany.edu/mathes">Mathes Childrens Literature</a> (catalog of books from the Miriam Snow Mathes Historical Children's Literature Collection)</li>
-
-				<li><a href="#">Rare Books</a> (catalog of pre-1801 European and pre-1820 American printed books)</li>
+				<li><a href="https://archives.albany.edu/books?f[collecting_area_ssim][]=Mathes+Childrens+Literature">Mathes Childrens Literature</a> (catalog of books from the Miriam Snow Mathes Historical Children's Literature Collection)</li>
+				
+				<li><a href="https://archives.albany.edu/books?f[collecting_area_ssim][]=Political+Pamphlets">Political Pamphlets</a> (a collection of poltical pamphlets primarily sourced from the German and Jewish Intellectual Émigré Collections)</li>			
+	
+				<li><a href="https://archives.albany.edu/books">Rare Books</a> (catalog of pre-1801 European and pre-1820 American printed books)</li>
 			</ul>
 
 		</div>
