changed arclight display name to Archives & Manuscripts

--- a/app/views/layouts/grenander/_navbar.html.erb
+++ b/app/views/layouts/grenander/_navbar.html.erb
@@ -9,7 +9,7 @@
       <ul class="navbar-nav">
       	<li class="nav-item dropdown">
 	      <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-	        All Collections
+	        Collections
 	      </a>
 	      <div class="dropdown-menu">
 	        <a class="dropdown-item" href="#">About Collections</a>
