--- a/app/assets/stylesheets/grenander/main.css
+++ b/app/assets/stylesheets/grenander/main.css
@@ -15,7 +15,7 @@ a:hover {
 }
 
 .facets-collapse .facet-limit button.btn:focus {
-        box-shadow: 0 0 0 0.2rem (158, 104, 199, 0.25);
+        box-shadow: 0 0 0 0.2rem rgba(100, 42, 144, 0.25);
 }
 
 .btn-primary {
