--- a/app/views/layouts/grenander/_navbar.html.erb
+++ b/app/views/layouts/grenander/_navbar.html.erb
@@ -13,17 +13,17 @@
 	      </a>
 	      <div class="dropdown-menu">
 	        <a class="dropdown-item" href="<%= URI.join(request.base_url, "/description") %>">About Collections</a>
-	        <a class="dropdown-item" href="<%= URI.join(request.base_url, "/description", "/repositories", "/apap") %>">NY State Modern Political Archive</a>
-	        <a class="dropdown-item" href="<%= URI.join(request.base_url, "/description", "/repositories", "/ndpa") %>">National Death Penalty Archive</a>
-	        <a class="dropdown-item" href="<%= URI.join(request.base_url, "/description", "/repositories", "/ger") %>">German Intellectual Émigré</a>
-	        <a class="dropdown-item" href="<%= URI.join(request.base_url, "/description", "/repositories", "/ua") %>">University Archives</a>
-	        <a class="dropdown-item" href="<%= link_to "Web Archives", "https://archives.albany.edu/web/mathes" %>">Mathes Childrens Literature</a>
-	        <a class="dropdown-item" href="<%= URI.join(request.base_url, "/description", "/repositories", "/mss") %>">Business and Literary Manuscripts</a>
+	        <a class="dropdown-item" href="<%= URI.join(request.base_url, "/description/", "/repositories/", "/apap") %>">NY State Modern Political Archive</a>
+	        <a class="dropdown-item" href="<%= URI.join(request.base_url, "/description/", "/repositories/", "/ndpa") %>">National Death Penalty Archive</a>
+	        <a class="dropdown-item" href="<%= URI.join(request.base_url, "/description/", "/repositories/", "/ger") %>">German Intellectual Émigré</a>
+	        <a class="dropdown-item" href="<%= URI.join(request.base_url, "/description/", "/repositories/", "/ua") %>">University Archives</a>
+	        <a class="dropdown-item" href="<%= link_to 'Web Archives', 'https://archives.albany.edu/web/mathes' %>">Mathes Childrens Literature</a>
+	        <a class="dropdown-item" href="<%= URI.join(request.base_url, "/description/", "/repositories/", "/mss") %>">Business and Literary Manuscripts</a>
 	        <a class="dropdown-item" href="<%= URI.join(request.base_url, "/books") %>">Rare Books</a>
-	        <a class="dropdown-item" href="<%= link_to "Web Archives", "https://archives.albany.edu/web/webarchives" %>">Web Archives</a>
+	        <a class="dropdown-item" href="<%= link_to 'Web Archives', 'https://archives.albany.edu/web/webarchives' %>">Web Archives</a>
 	        <div class="dropdown-divider"></div> 
-	        <a class="dropdown-item" href="<%= URI.join(request.base_url, "/description", "/repositories", "/all") %>" %>">A-Z Complete List of Collections</a>
-	        <a class="dropdown-item" href="<%= URI.join(request.base_url, "/description", "/repositories", "/sub") %>">Subject Guides to Collections</a>
+	        <a class="dropdown-item" href="<%= URI.join(request.base_url, "/description/", "/repositories/", "/all") %>" %>">A-Z Complete List of Collections</a>
+	        <a class="dropdown-item" href="<%= URI.join(request.base_url, "/description/", "/repositories/", "/sub") %>">Subject Guides to Collections</a>
 	      </div>
 	    </li>
 
