populated collections menu

--- a/app/views/layouts/grenander/_navbar.html.erb
+++ b/app/views/layouts/grenander/_navbar.html.erb
@@ -22,7 +22,7 @@
 	        <a class="dropdown-item" href="<%= URI.join(request.base_url, "/books") %>">Rare Books</a>
 	        <a class="dropdown-item" href="https://archives.albany.edu/web/webarchives">Web Archives</a>
 	        <div class="dropdown-divider"></div> 
-	        <a class="dropdown-item" href="<%= URI.join(request.base_url, "description/", "repositories/", "all") %>" %>">A-Z Complete List of Collections</a>
+	        <a class="dropdown-item" href="<%= URI.join(request.base_url, "description/", "repositories/", "all") %>">A-Z Complete List of Collections</a>
 	        <a class="dropdown-item" href="<%= URI.join(request.base_url, "description/", "repositories/", "sub") %>">Subject Guides to Collections</a>
 	      </div>
 	    </li>
